fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ nav ul {
   display: flex;
   gap: 20px;
   justify-content: center;
+  align-items: center;
 }
 
 /* Style the links */
@@ -33,14 +34,11 @@ nav a:hover {
 /* Style Hover Menu */
 .menu-label {
   padding: 10px;
-  display: block;
+  display: flex;
   color:#9856a8;
   font-weight: bold;
   text-decoration: none;
-  line-height: 1;
-  vertical-align: top;
-  cursor: default;
-
+  align-items: center;
 }
 
 .menu-label:hover {
